<resources>
    <string name="app_name">Pondy Heritage Map </string>

    <string name="title_section1">Pondy Heritage Map</string>
    <string name="title_section2">Pondy Heritage Map</string>
    <string name="title_section3">Pondy Heritage Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Refresh Map</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_file_up_load">Upload Files</string>

    <string name="accessToken">pk.eyJ1IjoibXVyYWxpaHI3NyIsImEiOiJjaWo5c2tqZjYwMDNtdXhseGFqeHlsZnQ4In0.W_DdV-qM8lNZzacVotHDEA</string>
    <string name="title_activity_capture_image">Add Image</string>
    <string name="title_activity_capture_audio">Add Audio</string>
    <string name="title_activity_capture_video">Add Video</string>
    <string name="title_activity_capture_text">Add Text</string>
    <string name="action_capture_image">Add Image</string>
    <string name="action_capture_audio">Add Audio</string>
    <string name="action_capture_video">Add Video</string>
    <string name="action_capture_text">Add Text</string>
    <string name="title_activity_list_file_up_load">List Files </string>
    <string name="title_activity_greeting_actvity">GreetingActvity</string>


    <string name="id_label">The ID is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">The Content is</string>
    <string name="content_value">[content]</string>
    <string name="action_refresh">Refresh</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Pondicherry Heritage </string>


    <string name="title_activity_register">Register a User</string>
    <string name="title_activity_detail">User detail</string>

    <string name="prompt_username">UserName</string>
    <string name="prompt_token">Access Token</string>
    <string name="prompt_id">User id</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_last_name">Last name</string>

    <string name="action_sign_in_short">Log in</string>
    <string name="action_register">Register</string>
    <string name="action_delete">Delete user</string>
    <string name="action_update">Update</string>

    <string name="register_progress">Registering&#8230;</string>
    <string name="update_progress">Updating&#8230;</string>
    <string name="delete_progress">Deleting&#8230;</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="specialmessage">Why is Pondicherry Special to you ? in&#8230;</string>

    <string name="success_delete">User deleted!</string>
    <string name="success_login">Success! User loged in</string>
    <string name="success_registration">Success! Registered Successfullty</string>
    <string name="success_update">User updated!</string>
    <string name="success_create">Success!! User created</string>

    <string name="change_for_update">You have to change anything</string>
    <string name="title_activity_splash">Splash </string>
</resources>
