<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">



    <item android:id="@+id/action_capture_image"
          android:title="@string/action_capture_image"
          app:showAsAction="never"/>
    <item android:id="@+id/action_capture_audio"
          android:title="@string/action_capture_audio"
          android:orderInCategory="100"

          app:showAsAction="never"/>

    <item android:id="@+id/action_capture_video"
          android:title="@string/action_capture_video"
          android:orderInCategory="100"
          app:showAsAction="never"/>


    <item android:id="@+id/action_capture_text"
          android:title="@string/action_capture_text"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_upload"
          android:title="Upload"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_refresh"
          android:title="Refresh"
          android:orderInCategory="100"
          android:visible="true"
          app:showAsAction="never" />

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:visible="false"
          android:orderInCategory="100"
          app:showAsAction="never"/>

</menu>
