<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              style="@style/FormContainer"
              android:orientation="vertical"
              tools:context=".activity.RegisterActivity" >

    <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:password="true"
            android:inputType="textCapWords"
            android:maxLines="1"

            android:singleLine="true" />
    <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_first_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:visibility="invisible"
            android:singleLine="true" />

    <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_last_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:visibility="invisible"
            android:singleLine="true" />


    <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:id="@+id/rgResidentStatus"
            android:layout_height="wrap_content">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I am  a Resident"
                android:id="@+id/radioButton"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I am a Visitor"
                android:id="@+id/radioButton2"/>


    </RadioGroup>

    <RadioGroup
            android:id="@+id/rgAge"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Child "
                android:id="@+id/radioButtonChild"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  Youth  "
                android:id="@+id/radioButtonYouth"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Adult  "
                android:id="@+id/radioButtonAdult"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  Elder  "
                android:id="@+id/radioButtonElder"/>


    </RadioGroup>

    <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:onClick="registerUser"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/action_register" />

</LinearLayout>